--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,40 +1,60 @@
-HELP.md
-.gradle
+# Gradle
+.gradle/
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+.gradle-cache/
 
-### STS ###
+# Spring Boot
+HELP.md
+target/
+*.jar
+*.war
+*.ear
+!**/src/main/**/*.jar
+!**/src/test/**/*.jar
+
+# Kotlin
+.kotlin/
+*.kotlin_module
+*.kotlin_builtins
+
+# Eclipse/STS
 .apt_generated
 .classpath
 .factorypath
 .project
-.settings
+.settings/
 .springBeans
 .sts4-cache
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+# IntelliJ IDEA (local overrides)
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
-### NetBeans ###
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 
-### VS Code ###
-.vscode/
+# Test reports
+/test-results/
+/test-output/
 
-### Kotlin ###
-.kotlin
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Application properties with secrets
+application-local.properties
+application-local.yml
+application-secrets.properties
+application-secrets.yml
