--- a/backend/src/main/resources/db/changelog/changelog-master.yaml
+++ b/backend/src/main/resources/db/changelog/changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/changes/v1.0.0-initial-schema.yaml
+  - include:
+      file: db/changelog/changes/v1.0.1-make-program-optional.yaml
