--- a/backend/src/main/resources/db/changelog/changelog-master.yaml
+++ b/backend/src/main/resources/db/changelog/changelog-master.yaml
@@ -3,3 +3,11 @@ databaseChangeLog:
       file: db/changelog/changes/v1.0.0-initial-schema.yaml
   - include:
       file: db/changelog/changes/v1.0.1-make-program-optional.yaml
+  - include:
+      file: db/changelog/changes/v1.1.0-users-table.yaml
+  - include:
+      file: db/changelog/changes/v1.1.1-invite-codes-table.yaml
+  - include:
+      file: db/changelog/changes/v1.1.2-refresh-tokens-table.yaml
+  - include:
+      file: db/changelog/changes/v1.1.3-sessions-user-id.yaml
