--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       SPRING_DATASOURCE_PASSWORD: makeit_password
       SPRING_JPA_HIBERNATE_DDL_AUTO: validate
       APP_CORS_ALLOWED_ORIGINS: http://localhost:3000,http://localhost:5173,http://frontend:80
+      JWT_SECRET: change-me-in-production-this-must-be-at-least-32-characters-long
+      BOOTSTRAP_INVITE_CODE: ${BOOTSTRAP_INVITE_CODE:-make-it-first-user}
     ports:
       - "8080:8080"
     depends_on:
