--- a/backend/src/main/resources/db/changelog/changelog-master.yaml
+++ b/backend/src/main/resources/db/changelog/changelog-master.yaml
@@ -11,3 +11,5 @@ databaseChangeLog:
       file: db/changelog/changes/v1.1.2-refresh-tokens-table.yaml
   - include:
       file: db/changelog/changes/v1.1.3-sessions-user-id.yaml
+  - include:
+      file: db/changelog/changes/v1.2.0-programs-update.yaml
